# CuJankDetector

./: README.md  build.sh
injector/: CMakeLists.txt
injector/src/: injector.cpp
injector/src/utils/: misc.cpp  misc.h  ptrace_utils.h
magisk/: customize.sh  module.prop  post-fs-data.sh  service.sh
source/: CMakeLists.txt
source/src/: main.cpp
source/src/utils/: elf_reader.h
